<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:isScrollContainer="false" 
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:scrollbars="none"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/menu_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
			android:focusableInTouchMode="true" 
            android:orientation="vertical"
            android:padding="0dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0" >

                <EditText
                    android:id="@+id/searchbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/search"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="4dp"/>

                <ImageButton
                    android:id="@+id/searchCancel"
                    style="?android:attr/buttonStyleSmall"
                    android:src="@drawable/searchcancel"
                    android:background="#00000000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:layout_weight="0"
                    android:contentDescription="@string/cancel"
                    android:scaleType="centerCrop"/>

            </LinearLayout>

            <FrameLayout
                android:padding = "0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/menu_grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/main_grid_margin" >

                    <LinearLayout
                        android:id="@+id/tableRow1"
                        style="@style/TableRowStyle" >

                        <ImageButton
                            android:id="@+id/main00"
                            style="@style/MainMenuButton"
                            android:contentDescription="@string/main00"
                            android:src="@drawable/icon_dropdime" />

                        <ImageButton
                            android:id="@+id/main01"
                            style="@style/MainMenuButton"
                            android:contentDescription="@string/main01"
                            android:src="@drawable/icon_flipcup" />

                        <ImageButton
                            android:id="@+id/main02"
                            style="@style/MainMenuButton"
                            android:contentDescription="@string/main02"
                            android:src="@drawable/icon_movies" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tableRow2"
                        style="@style/TableRowStyle" >

                        <ImageButton
                            android:id="@+id/main10"
                            style="@style/MainMenuButton"
                            android:contentDescription="@string/main10"
                            android:src="@drawable/icon_kings" />

                        <ImageButton
                            android:id="@+id/main11"
                            style="@style/MainMenuButton"
                            android:contentDescription="@string/main11"
                            android:src="@drawable/icon_cards" />

                        <ImageButton
                            android:id="@+id/main12"
                            style="@style/MainMenuButton"
                            android:contentDescription="@string/main12"
                            android:src="@drawable/icon_beerbomb" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tableRow3"
                        style="@style/TableRowStyle" >

                        <ImageButton
                            android:id="@+id/main20"
                            style="@style/MainMenuButton"
                            android:contentDescription="@string/main20"
                            android:src="@drawable/icon_quarters" />

                        <ImageButton
                            android:id="@+id/main21"
                            style="@style/MainMenuButton"
                            android:contentDescription="@string/main21"
                            android:src="@drawable/icon_powerhour" />

                        <ImageButton
                            android:id="@+id/main22"
                            style="@style/MainMenuButton"
                            android:contentDescription="@string/main22"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:src="@drawable/icon_beerpong" />
                    </LinearLayout>
                    
                </LinearLayout>
                
                <com.example.drinkrules.CustomListView
                    android:id="@+id/searchResults"
                    android:background="#80000000"
                    android:isScrollContainer="false"
                    android:visibility="invisible"
                    android:layout_margin="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/subfooter"
	    android:id="@+id/subfooter"
	    android:orientation="horizontal"
        android:layout_weight="0">
	       
	    <ImageButton
	        android:id="@+id/myrules"
	        android:contentDescription="@string/my_rules"
	        android:src="@drawable/myrules" 
	        style="@style/BottomBarButton" />
	        
	        
	    <ImageButton
	        android:id="@+id/submitrule"
	     	android:contentDescription="@string/submit_rule"
	        android:src="@drawable/submitrule" 
	        style="@style/BottomBarButton" />
	          
		<ImageButton
		          android:id="@+id/search"
		       android:contentDescription="@string/search"
		          android:src="@drawable/search" 
		          style="@style/BottomBarButton" />
		          
		<ImageButton
		          android:id="@+id/rateapp"
		       android:contentDescription="@string/rate"
		          android:src="@drawable/rateapp" 
		          style="@style/BottomBarButton" />
	          
	</LinearLayout>

	<RelativeLayout
	    android:background="@drawable/footer"
	    android:id="@+id/footer"
	    android:layout_weight="0"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	        
	    <ImageView
	        android:id="@+id/footerR"
			android:contentDescription="@string/submit_rule"
	        android:src="@drawable/footerrulebook" 
	        android:layout_centerInParent="true"
	        style="@style/BottomBarButton" />
	    	        
	    <ImageButton
	        android:id="@+id/shareButton"
	        android:src="@drawable/footeraction"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="16dp"
	        android:contentDescription="@string/share"
	        style="@style/BottomBarButton"/>			
	    
	    <ImageButton
	        android:id="@+id/legalInfo"
	        android:src="@drawable/footerinfo"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:layout_marginRight="16dp"
	        android:contentDescription="@string/info"
	        style="@style/BottomBarButton"/>
	    
	</RelativeLayout>

</LinearLayout>