<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="0dp"
    android:background="@drawable/table_background"
    tools:context=".SubMenuActivity" >

    <FrameLayout
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:scrollbars="none"
            android:background="@drawable/untitledgrad2"
            android:id="@+id/menuscrollview"
            android:layout_gravity="center_horizontal|bottom">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                <ImageButton
                        android:id="@+id/homeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:background="@android:color/transparent"
                        android:onClick="button1Response"
                        android:src="@drawable/selector_home" />

                <ImageButton
                        android:id="@+id/ImageButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:background="@android:color/transparent"
                        android:onClick="button2Response"
                        android:src="@drawable/selector_dropthedime" />
                <ImageButton
                        android:id="@+id/ImageButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:background="@android:color/transparent"
                        android:onClick="button3Response"
                        android:src="@drawable/selector_flipcup" />
                <ImageButton
                        android:id="@+id/ImageButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/selector_tvmovies"
                        android:onClick="button4Response"
                        android:contentDescription="tvmovies icon"/>
                <ImageButton
                        android:id="@+id/ImageButton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:background="@android:color/transparent"
                        android:onClick="button5Response"
                        android:src="@drawable/selector_kings" />
                <ImageButton
                        android:id="@+id/ImageButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:background="@android:color/transparent"
                        android:onClick="button6Response"
                        android:src="@drawable/selector_cards" />
                <ImageButton
                        android:id="@+id/ImageButton6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:background="@android:color/transparent"
                        android:onClick="button7Response"
                        android:src="@drawable/selector_beerbomb" />
                <ImageButton
                        android:id="@+id/ImageButton7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:background="@android:color/transparent"
                        android:onClick="button8Response"
                        android:src="@drawable/selector_quarters" />
                <ImageButton
                        android:id="@+id/ImageButton8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:background="@android:color/transparent"
                        android:onClick="button9Response"
                        android:src="@drawable/selector_powerhour" />
                <ImageButton
                        android:id="@+id/ImageButton9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:background="@android:color/transparent"
                        android:onClick="button10Response"
                        android:src="@drawable/selector_beerpong" />

            </LinearLayout>
        </HorizontalScrollView>
    </FrameLayout>

    <RelativeLayout
            android:background="@drawable/footer"
            android:id="@+id/footerSubMenu"
            android:layout_weight="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/footerR"
                android:contentDescription="@string/submit_rule"
                android:src="@drawable/footerrulebook"
                android:layout_centerInParent="true"
                style="@style/BottomBarButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shareButtonSubMenu"
                android:src="@drawable/footeraction"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/share"
                style="@style/BottomBarButton"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/popUpButton"
                android:src="@drawable/footerpopup"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/popUpString"
                style="@style/BottomBarButton"
                android:paddingRight="16dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remove Ads"
            android:id="@+id/NoAds"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <com.google.ads.AdView
            android:id="@+id/ad"
            ads:adSize="BANNER"
            ads:adUnitId="AD_UNIT_ID_GOES_HERE"
            ads:loadAdOnCreate="true"
            ads:testDevices="TEST_EMULATOR,280b0bd8-9f5e-4999-90a0-aaf1d4d5afe7"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"/>

</LinearLayout>